--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,16 @@
+.bigCounter{
+    text-align:center;
+    background: black;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.bigCounter div{
+    text-align: center;
+    display: inline-flex;
+    font-size: 80px;
+    line-height: 90px;
+    height: 50px;
+    background: #101010;
+    color: white;
+    padding: 50px;
+    margin: 20px;
+}
